--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,10 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets WebEngineWidgets)
 qt_standard_project_setup()
 
+set(MACOSX_BUNDLE_ICON_FILE qt-remit.icns)
+set(app_icon_macos "${CMAKE_CURRENT_SOURCE_DIR}/resources/qt-remit.icns")
+set_source_files_properties(${app_icon_macos} PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
+
 qt_add_executable(qt-remit
     githubview.cpp
     constants.cpp
@@ -15,6 +19,7 @@ qt_add_executable(qt-remit
     remitview.cpp
     settings.cpp
     main.cpp
+    ${app_icon_macos}
 )
 
 target_link_libraries(qt-remit PRIVATE Qt6::Widgets Qt6::WebEngineWidgets)
