Pacify QtCreator on Windows
the MSVC compiler doesn't set this, so QtCreator thinks we're on an ancient clang version and is sad.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,3 +29,5 @@ set_target_properties(qt-remit PROPERTIES
   WIN32_EXECUTABLE ON
   MACOSX_BUNDLE ON
 )
+
+target_compile_definitions( ${PROJECT_NAME} PRIVATE __clang_major__=18)
