--- a/.gitignore
+++ b/.gitignore
@@ -1,74 +1,65 @@
-# This file is used to ignore files which are generated
-# ----------------------------------------------------------------------------
+###############################
+# Qt/CMake/IDE/OS Artifacts  #
+###############################
 
-*~
-*.autosave
-*.a
-*.core
-*.moc
-*.o
-*.obj
-*.orig
-*.rej
-*.so
-*.so.*
-*_pch.h.cpp
-*_resource.rc
-*.qm
-.#*
-*.*#
-core
-!core/
-tags
-.DS_Store
-.directory
-*.debug
-Makefile*
-*.prl
-*.app
+# Build directories
+build/
+*/build/
+
+# Qt generated files
 moc_*.cpp
 ui_*.h
 qrc_*.cpp
-Thumbs.db
-*.res
-*.rc
+*.qm
+
+# CMake/Qt Creator
+CMakeLists.txt.user*
 /.qmake.cache
 /.qmake.stash
+*.autosave
 
-# qtcreator generated files
-*.pro.user*
-CMakeLists.txt.user*
-
-# xemacs temporary files
-*.flc
-
-# Vim temporary files
+# OS and editor temp files
+*~
+.DS_Store
+Thumbs.db
+.directory
+.#*
+*.*#
 .*.swp
+tags
 
-# Visual Studio generated files
-*.ib_pdb_index
+# Visual Studio
+*.sln
+*.vcxproj
+*.vcxproj.*
+*.vcproj
+*.vcproj.*
+*.pdb
 *.idb
 *.ilk
-*.pdb
-*.sln
 *.suo
-*.vcproj
-*vcproj.*.*.user
 *.ncb
 *.sdf
 *.opensdf
-*.vcxproj
-*vcxproj.*
 
-# MinGW generated files
+# MinGW
 *.Debug
 *.Release
 
-# Python byte code
-*.pyc
-
 # Binaries
-# --------
 *.dll
 *.exe
+*.so
+*.a
+*.o
+*.obj
+*.res
+
+# Logs and cache
+*.log
+*.cache
+
+# Python byte code
+*.pyc
+*.Release
 
